[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/life_tracker.gd" id="1_tracker"]

[node name="LifeTracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tracker")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer/TopBar"]
custom_minimum_size = Vector2(160, 44)
layout_mode = 2
text = "Main Menu"

[node name="NewGameButton" type="Button" parent="VBoxContainer/TopBar"]
custom_minimum_size = Vector2(160, 44)
layout_mode = 2
text = "New Game"

[node name="BoardContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
